--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.1",
     "express-handlebars": "^5.3.2",
     "mocha": "^9.0.2",
+    "moment": "^2.29.1",
     "nodemon": "^2.0.12"
   }
 }
