--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.3.2",
+    "helper-moment": "^0.2.0",
     "mocha": "^9.0.2",
     "moment": "^2.29.1",
     "nodemon": "^2.0.12"
